@@ -14,6 +14,7 @@
 		<cucumber.version>1.2.5</cucumber.version>
 		<maven.compiler.version>3.3</maven.compiler.version>
 		<surefire.maven.plugin.version>2.20</surefire.maven.plugin.version>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencies>
@@ -50,154 +51,161 @@
 			<version>3.4.0</version>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>com.github.temyers</groupId>
-				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
-				<version>4.2.0</version>
-				<executions>
-					<execution>
-						<id>generateRunners</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>generateRunners</goal>
-						</goals>
-						<configuration>
-							<filterFeaturesByTags>true</filterFeaturesByTags>
-							<glue>
-								<package>step_definition</package>
-							</glue>
 
-							<plugins>
-								<plugin>
-									The available options are junit, testng, html, pretty, json, 
-										usage and rerun
-									<name>json</name>
-									Optional file extension. For build in cucumber plugins a sensible 
-										default is provided.
-									<extension>json</extension>
-									Optional output directory. Overrides cucumberOutputDirectory. 
-										Usefull when different plugins create files with the same extension
-									<outputDirectory>${project.build.directory}/</outputDirectory>
-								</plugin>
-							</plugins> 
-
-							<!-- These are optional, with the default values -->
-							<!-- Where to output the generated tests -->
-							<outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
-							<!-- The directory, which must be in the root of the runtime classpath, 
-								containing your feature files. -->
-							<featuresDirectory>src/test/resources/feature/</featuresDirectory>
-							<!-- Directory where the cucumber report files shall be written -->
-							<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
-
-							<!-- <strict>true</strict> -->
-
-							<tags>
-								<tag>~@ignore</tag>
-							</tags>
-
-							<!-- Generate TestNG runners instead of JUnit ones. -->
-							<useTestNG>false</useTestNG>
-
-							<!-- The naming scheme to use for the generated test classes. One 
-								of 'simple' or 'feature-title' -->
-							<namingScheme>feature-title</namingScheme>
-							<!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per 
-								scenario. FEATURE generates a runner per feature. -->
-							<parallelScheme>FEATURE</parallelScheme>
-							<!-- Specify a custom template for the generated sources (this is 
-								a path relative to the project base directory) -->
-							<customVmTemplate>src/main/resources/cucumber-junit-runner.java.vm</customVmTemplate>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		<!-- 	<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
-				<executions>
-					<execution>
-						<id>generateRunners</id>
-						<phase>generateRunners</phase>
-						<goals>
-							<goal>generateRunners</goal>
-						</goals>
-						<configuration>
-							<forkCount>5</forkCount>
-							<reuseForks>true</reuseForks>
-							<includes>
-								<include>**/*IS.class</include>
-							</includes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.20</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.version}</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<compilerArgument>-Werror</compilerArgument>
-				</configuration>
-			</plugin>
-		</plugins>
-
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+		
 				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire.maven.plugin.version}</version>
 					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											com.github.temyers
-										</groupId>
-										<artifactId>
-											cucumber-jvm-parallel-plugin
-										</artifactId>
-										<versionRange>
-											[4.2.0,)
-										</versionRange>
-										<goals>
-											<goal>generateRunners</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
+						<skipTests>true</skipTests>
 					</configuration>
 				</plugin>
+				
+				
+				<plugin>
+					<groupId>com.github.temyers</groupId>
+					<artifactId>cucumber-jvm-parallel-plugin</artifactId>
+					<version>4.2.0</version>
+					<executions>
+						<execution>
+							<id>generateRunners</id>
+							<phase>validate</phase>
+							<goals>
+								<goal>generateRunners</goal>
+							</goals>
+							<configuration>
+								<filterFeaturesByTags>true</filterFeaturesByTags>
+								<glue>
+									<package>step_definition</package>
+								</glue>
+
+								<plugins>
+									<plugin>
+										<name>json</name>
+										<extension>json</extension>
+										<outputDirectory>${project.build.directory}/</outputDirectory>
+									</plugin>
+								</plugins>
+
+								<!-- These are optional, with the default values -->
+								<!-- Where to output the generated tests -->
+								<outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
+								<!-- The directory, which must be in the root of the runtime classpath, 
+									containing your feature files. -->
+								<featuresDirectory>src/test/resources/feature/</featuresDirectory>
+								<!-- Directory where the cucumber report files shall be written -->
+								<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
+
+								<!-- <strict>true</strict> -->
+
+								<tags>
+									<tag>~@ignore</tag>
+								</tags>
+
+								<!-- Generate TestNG runners instead of JUnit ones. -->
+								<useTestNG>false</useTestNG>
+
+								<!-- The naming scheme to use for the generated test classes. One 
+									of 'simple' or 'feature-title' -->
+								<namingScheme>feature-title</namingScheme>
+								<!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per 
+									scenario. FEATURE generates a runner per feature. -->
+								<parallelScheme>FEATURE</parallelScheme>
+								<!-- Specify a custom template for the generated sources (this is 
+									a path relative to the project base directory) -->
+								<customVmTemplate>src/main/resources/cucumber-junit-runner.java.vm</customVmTemplate>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>2.20</version>
+					<configuration>
+						<forkCount>2</forkCount>
+						<reuseForks>true</reuseForks>
+						<includes>
+							<include>**/*IT.java</include>
+						</includes>
+						<runOrder>alphabetical</runOrder>
+						<argLine>-Duser.language=en</argLine>
+						<argLine>-Xmx512m</argLine>
+						<argLine>-XX:MaxPermSize=256m</argLine>
+						<argLine>-Dfile.encoding=UTF-8</argLine>
+						<systemPropertyVariables>
+							<!--<cucumber.options>&#45;&#45;tags @example</cucumber.options> -->
+						</systemPropertyVariables>
+					</configuration>
+					<executions>
+						<execution>
+							<id>failsafe-integration-test</id>
+							<phase>integration-test</phase>
+							<goals>
+								<goal>integration-test</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven.compiler.version}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+						<compilerArgument>-Werror</compilerArgument>
+					</configuration>
+				</plugin>
+
+
 			</plugins>
-		</pluginManagement>
+
+			<pluginManagement>
+				<plugins>
+					<!--This plugin's configuration is used to store Eclipse m2e settings 
+						only. It has no influence on the Maven build itself. -->
+					<plugin>
+						<groupId>org.eclipse.m2e</groupId>
+						<artifactId>lifecycle-mapping</artifactId>
+						<version>1.0.0</version>
+						<configuration>
+							<lifecycleMappingMetadata>
+								<pluginExecutions>
+									<pluginExecution>
+										<pluginExecutionFilter>
+											<groupId>
+												com.github.temyers
+											</groupId>
+											<artifactId>
+												cucumber-jvm-parallel-plugin
+											</artifactId>
+											<versionRange>
+												[4.2.0,)
+											</versionRange>
+											<goals>
+												<goal>generateRunners</goal>
+											</goals>
+										</pluginExecutionFilter>
+										<action>
+											<ignore></ignore>
+										</action>
+									</pluginExecution>
+								</pluginExecutions>
+							</lifecycleMappingMetadata>
+						</configuration>
+					</plugin>
+				</plugins>
+			</pluginManagement>
 	</build>
 </project>
